# aana.

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js
api/: .dockerignore  Dockerfile  index.py  pyproject.toml  requirements.txt
api/handlers/: __init__.py  error.py  search.py
api/models/: __init__.py  base.py  search.py
api/utils/: qubecrawl.py  serper_client.py  store.py
src/: App.tsx  ChatHistoryModal.tsx  index.css  main.tsx
src/components/: AIChat.tsx  ErrorBoundary.tsx  ImageGallery.tsx  PlacesGallery.tsx  SearchInterface.tsx  SearchResults.tsx  ShoppingGallery.tsx  VideoGallery.tsx  WebSearchResults.tsx
src/hooks/: useSearch.ts  useSearchQueries.ts
src/lib/: chatHistory.ts  queryClient.ts
src/services/: searchApi.ts
src/stores/: searchStore.ts  themeStore.ts
src/types/: search.ts
src/utils/: urlChecker.ts
